<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">


    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/my_profile"
        android:title="@string/my_profile"/>

    <item
        android:id="@+id/allowed_services"
        android:icon="@drawable/services_icon"
        android:title="@string/allowed_services"/>

    <item
        android:id="@+id/upload_documnets"
        android:icon="@drawable/upload"
        android:title="@string/upload_documents"/>

    <item
        android:id="@+id/language"
        android:icon="@drawable/language"
        android:title="@string/language"/>

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/logout"
        android:title="@string/log_out"/>


       <!-- <item
            android:id="@+id/navigation_item_11"
            android:icon="@drawable/my_profile"
            android:title="My Profile"/>
-->
    //Share App app:actionViewClass="android.widget.TextView"

   <!-- <item
        android:id="@+id/sos_settings"
        android:icon="@drawable/ic_settings"
        android:title="SOS Settings"/>

    <item
        android:id="@+id/notification_item"
        android:icon="@drawable/notification"
        app:actionViewClass="android.widget.TextView"
        android:title="Notifications"/>


    <item
        android:id="@+id/share_app"
        android:icon="@drawable/ic_share"
        android:title="Share App"/>


    <item
            android:id="@+id/navigation_item_7"
            android:icon="@drawable/logout"
            android:title="Log Out"/>-->


</menu>