<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:id="@+id/back_navigation"
            android:tint="@color/black_color"
            android:src="@drawable/back_arrow"/>

        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:tint="@color/black_color"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_color"
            android:textSize="16sp"
            android:text="@string/member_signup_title"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/prompt_email"
                android:id="@+id/et_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black_color"
                android:textColorHint="@color/theme_primary"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/tab_selected_bg"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:text="@string/submit"/>

    </LinearLayout>

</RelativeLayout>