<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/splashImage"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_textview">

            <!-- INPUT -->
            <EditText
                android:id="@+id/editConfirmCode"
                android:layout_toRightOf="@+id/code_icon"
                android:hint="@string/auth_code"
                android:padding="10dp"
                android:background="@color/transparent"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:maxLines="1"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <!-- ICON -->
            <ImageView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/code_icon"
                android:src="@drawable/ic_password"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_textview">

            <!-- INPUT -->
            <EditText
                android:id="@+id/txtPassword"
                android:layout_toRightOf="@+id/password_icon"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <!-- ICON -->
            <ImageView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/password_icon"
                android:src="@drawable/ic_password"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_textview">

            <!-- INPUT -->
            <EditText
                android:id="@+id/txtCPassword"
                android:layout_toRightOf="@+id/cPassword_icon"
                android:hint="@string/re_enter_your_password"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <!-- ICON -->
            <ImageView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/cPassword_icon"
                android:src="@drawable/ic_password"
                android:layout_width="25dp"
                android:layout_height="25dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnValidate"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:text="UPDATE PASSWORD"/>

        <TextView
            android:id="@+id/btnResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/authentication_code_not_received"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

     </LinearLayout>

</ScrollView>