<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="asim.tgs_member_app.SetupPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"

        >
        <ImageView
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:id="@+id/back_navigation"
            android:src="@drawable/back_arrow"/>



        <ImageView
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/app_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:id="@+id/splashImage"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:layout_marginTop="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="Set Your Password"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:textSize="30dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_textview">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toRightOf="@+id/password_icon"
                    android:background="@color/transparent"
                    android:hint="@string/enter_your_password"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/dark_gray_color" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_password"
                    android:tint="@color/theme_primary" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_textview">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/confirm_pass"
                    android:layout_toRightOf="@+id/re_enter_icon"
                    android:hint="@string/re_enter_your_password"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/dark_gray_color"
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"/>

                <!-- ICON -->
                <ImageView
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/re_enter_icon"
                    android:src="@drawable/ic_password"
                    android:layout_width="25dp"
                    android:tint="@color/theme_primary"
                    android:layout_height="25dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/save_pass"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:text="@string/save_pass"
                android:textColor="@color/white_color"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
